--- a/views/index.haml
+++ b/views/index.haml
@@ -1,5 +1,5 @@
 %p
-  Video aufnehmen
+  Nimm hier dein Video auf
 
 %form#form{action: '/', method: 'POST', enctype: 'multipart/form-data'}
   .custom-file
@@ -14,3 +14,5 @@
       #left-side.half-circle
       #right-side.half-circle
     .shadow
+
+%p#message
