adjust file size

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,5 +1,7 @@
 %p
   Nimm hier dein Video auf
+  %br/
+  (max. eine Minute)
 
 %form#form{action: '/', method: 'POST', enctype: 'multipart/form-data'}
   .custom-file
