--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,7 @@ body {
   font-size: 24px;
   line-height: 1.42857143;
   color: #000;
+  opacity: 0.65;
   background-color: #fff;
   overflow-y: hidden;
   position: relative;
