--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,7 +6,7 @@
     %meta{http_equiv: 'X-UA-Compatible', content: 'IE=edge'}
     %meta{name: 'viewport', content: 'width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no'}
 
-    %title mobideo
+    %title record.now
 
     %link{href: 'style.css', rel: 'stylesheet'}
 
